more efficient creation of booleans